--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "print-time-webpack-plugin.js",
   "scripts": {
     "format": "./node_modules/.bin/prettier --no-config --single-quote --write '**/*.js'"
+    "test": "echo 'success'"
   },
   "repository": {
     "type": "git",
